perf: reduced from 48b to 32b the space occupied in RAM by the RID
(cherry picked from commit 891e2f14d66fd539216cf48e132e219350972674)